@@ -14,6 +14,7 @@ ovirt-host-deploy -- oVirt host deploy
  * vdsm: ovirt-node: detect nodes with own bridges and report back.
  * vdsm: packages: cgconfig is dependency of libvirt.
  * vdsm: packages: use new method of libvirt reconfigure.
+ * vdsm: packages: disable NetworkManager service.
  * gluster: packages: start glusterd if no reboot.
  * openstack: add neutron support.
  * build: re-introduce external gettext packaging.
